[tool.poetry]
name = "cs39aa-nlp-project"
version = "0.1.0"
description = ""
authors = ["Brady Lamson <lamsonbrady@gmail.com>"]
readme = "README.md"
packages = [{include = "cs39aa_nlp_project"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
numpy = "^1.26.1"
pandas = "^2.1.1"
kaggle = "^1.5.16"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
scikit-multilearn = "^0.2.0"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
nltk = "^3.8.1"
transformers = "^4.35.2"
torch = "^2.1.1"
datasets = "^2.15.0"
accelerate = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
